caputils-0.7.3
--------------

	* change: made fields in struct stream unsigned.
	* fix: h_proto is 2 bytes.
	* fix: minor build-system fixes, mostly related to make dist.
	* change: adding a third library (libcap_stream) which deals only with
	          the stream. libcap_utils is utility functions only.
	* change: rename ethaton.c to utils.c
	* change: Moving stream_addr_t functions to a new source file: address.c
	* change: Renamed struct destination_t to stream_addr_t
	* change: Renamed {create,open,close}stream to stream_{create,open,close}
	* fix: Fixed capdump.
	* change: more man-pages.
	* change: stream_read takes cap_head pointer instead of char-buffer.
	* fix: Fixing compability issues with linux-2.4